fix(ld-card-stack): issue with negative z-indexed cards

--- a/src/liquid/components/ld-card/ld-card-stack/ld-card-stack.css
+++ b/src/liquid/components/ld-card/ld-card-stack/ld-card-stack.css
@@ -9,6 +9,7 @@
   grid-template-columns: 1fr;
   padding: 0;
   position: relative;
+  z-index: 0;
 
   ::slotted(.ld-card),
   .ld-card {
